<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Workout Strech base</string>
    <string-array name="lv_menu">
        <item>腓腹筋伸ばし</item>
        <item>つま先立ち</item>
        <item>(立)脚裏伸ばし</item>
        <item>膝裏ボール(タオル)潰し</item>
        <item>足指じゃんけん</item>
        <item>足首屈伸</item>
        <item>(寝)脚裏伸ばし</item>
        <item>膝抱え</item>
        <item>足上げ腹筋</item>
        <item>レッグライズ</item>
        <item>ヒップリフト</item>
        <item>股関節　内転・外転</item>
        <item>バードドック</item>
        <item>ヒップアブダクション(Belt)</item>
        <item>ヒップアダクション(Ball)</item>
        <item>スケボー脚屈伸</item>
        <item>足上げ</item>
        <item>チェアスクワット</item>
        <item>フロントランジ</item>
        <item>鎌田式テーブルスクワット</item>
        <item>鎌田式ワイドスクワット</item>
        <item>鎌田式かかと落とし</item>
        <item>前モモ伸ばし</item>
        <item>(座)脚裏伸ばし</item>
    </string-array>

    <string name="bt_play_play">再生</string>
    <string name="bt_play_pause">一時停止</string>
    <string name="bt_back">戻る</string>
    <string name="bt_forward">>> </string>
    <string name="sw_loop">リピート再生</string>
    <string name="handsup">手を上げて</string>
    <string name="volume_default">volume 40%</string>
    <string name="activity1">ボール</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="restart">RESTART</string>
    <string name="return_to">戻る</string>
    <string name="keep5s">5秒間キープ"</string>
    <string name="keep3s">3秒間キープ"</string>
    <string name="keep3s2">３秒間キープ"</string>
    <string name="keep2s">2秒キープ　"</string>
    <string name="keep1s"> 1秒キープ"</string>
    <string name="keep10s">10秒間キープ"</string>
    <string name="keep20s">20秒間キープ"</string>
    <string name="keep30s">30秒間キープ"</string>
    <string name="remain5">あと5回</string>
    <string name="remain3">あと3回</string>
    <string name="more_half">あと半分</string>
    <string name="slow_up">ゆっくり上げて</string>
    <string name="slow_down">ゆっくり下げて</string>
    <string name="slow_open">ゆっくり開いて</string>
    <string name="open">開いて</string>
    <string name="slow_close">ゆっくり閉じて</string>
    <string name="up">上げて</string>
    <string name="down">下げて</string>
    <string name="standup">ゆっくり立って</string>
    <string name="sitdown">ゆっくり座って</string>
    <string name="goo">グー</string>
    <string name="choki">チョキ</string>
    <string name="urachoki">裏チョキ</string>
    <string name="pa">パー</string>
    <string name="yuru">ゆるめて</string>
    <string name="tubu">つぶして</string>
    <string name="slow_stre">伸ばして</string>
    <string name="noba">伸ばして</string>
    <string name="modo">戻して</string>
    <string name="stre15keep">伸ばして15秒キープ</string>
    <string name="slow_bent">曲げて</string>
    <string name="taoshite">骨盤を倒して</string>
    <string name="foot_stre">足首を伸ばして</string>
    <string name="foot_bent">足首を曲げて</string>
    <string name="hizakakae">膝を抱えて引き付ける</string>
    <string name="good_job">お疲れさまでした</string>
    <string name="finished">終了</string>
    <string name="relax">リラックス</string>
    <string name="relax10">10秒リラックス</string>
    <string name="change">足を変えて上げて</string>
    <string name="change4">手足を変えて上げて</string>
    <string name="change3">足を変えて</string>
    <string name="change2">足を変えて引き付ける</string>
    <string name="updown">足をそろえて上下</string>
    <string name="goright">左足踏み出して</string>
    <string name="goleft">右足踏み出して</string>
    <string name="goback">元に戻って</string>
    <string name="tovideo">トレーニング方法</string>
    <string name="start_button">start</string>
    <string name="stop_button">stop</string>
    <string name="restart_button">restart</string>
    <string name="back_button">back</string>
    <string name="width">80dp</string>
    <string name="height">35dp</string>
    <string name="btn_save">保存して戻る</string>
    <string name="tv_lb_note">回数:</string>
    <string name="tv_name">未選択</string>
    <string name="chang_times">回数変更</string>
    <string name="menu">メニュー</string>
    <string name="times">回数</string>
    <string name="exesize">動 作</string>
    <string name="kaisuu">運動回数</string>
    <string name="youtube">Youtube</string>
    <string name="textview">TextView</string>
    <string name="changtimes">回数変更</string>
    <string name="play_button">play プレイボタン</string>
    <string name="w_s">W:ワークアウト　S:ストレッチ</string>
    <string name="bgm">BGM\nボタン</string>
    <string name="button">Button</string>
    <string name="textview00">TextView00</string>
    <string name="youtube_text">消音しています。\nYouTubeの画面をクリックして\n音を出してください</string>
    <string name="time">Time</string>
    <string name="hikitsuke">引き付けて</string>
    <string name="remark">説明文の下が切れた時はスクロールできます</string>
    <string name="youtuberemark">Youtubeを開いてこの画面に戻るには、スマフォの戻るボタンで戻ってください。</string>
    <string name="right_leg_up">右足を上げて</string>
    <string name="left_leg_up">左足を上げて</string>
    <string name="drop">すとんと落として</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="back">戻る</string>
    <string name="exrecord">実行記録</string>
    <string name="deleterecord">記録を削除</string>
    <string name="times_by_sets">1セットの回(秒)数</string>
    <string name="ref_hint_times">15</string>
    <string name="scroolOK">下のアクティビティは\nスクロールできます</string>
</resources>