<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/tvWorkoutName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/kaisuu"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/etTimes"
        app:layout_constraintEnd_toStartOf="@+id/etTimes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWorkoutName" />

    <EditText
        android:id="@+id/etTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:autofillHints="回数"
        android:background="#00000000"
        android:digits="0123456789"
        android:gravity="end"
        android:hint="@string/time"
        android:inputType="number"
        android:minEms="2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWorkoutName"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textViewRepsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/times_by_sets"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/etReps"
        app:layout_constraintEnd_toStartOf="@+id/etReps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/etReps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:autofillHints="秒数"
        android:background="#00000000"
        android:digits="0123456789"
        android:gravity="end"
        android:hint="@string/ref_hint_times"
        android:inputType="number"
        android:minEms="2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTimes"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_start"
        android:importantForAccessibility="no"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:text="変更して戻る"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRepsLabel"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>