<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">


    <TextView
        android:id="@+id/textmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/menu"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/times"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textmenu" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/exesize"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv" />

    <Button
        android:id="@+id/btStart"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_start"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:text="START"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/btStop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2" />


    <Button
        android:id="@+id/btStop"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_start"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:text="STOP"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/btnrestart"
        app:layout_constraintStart_toEndOf="@+id/btStart"
        app:layout_constraintTop_toBottomOf="@+id/tv2" />

    <Button
        android:id="@+id/btspeed"
        android:visibility="invisible"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_start"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:text="SPEED"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/btnback"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btStart" />

    <Button
        android:id="@+id/btnrestart"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_start"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:text="RESTART"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btStop"
        app:layout_constraintTop_toBottomOf="@+id/tv2"/>

    <Button
        android:id="@+id/btnback"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_back_selector"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:text="BACK"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/btspeed"
        app:layout_constraintTop_toBottomOf="@+id/btStop" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_times_selector"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:text="Times"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnback"
        app:layout_constraintTop_toBottomOf="@+id/btnrestart" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="tv2" />

    <ImageButton
        android:id="@+id/youtube"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/btn_youtube_selector"
        android:scaleType="fitCenter"
        android:contentDescription="YouTubeで動画を見る"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnback" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/youtuberemark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/youtube" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/remark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ScrollView
        android:id="@+id/lv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TextView
            android:id="@+id/tvexpla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:textSize="18sp" />

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>




